Some changes to add button and AWS authentication

--- a/server/frontend/index.html
+++ b/server/frontend/index.html
@@ -6,7 +6,13 @@
 <body>
 <h1>Photo album viewer</h1>
 <div id="viewer" />
-
+<p contenteditable="true" spellcheck="true">Thanks furrr chking my spelling
+    <footer><p translate="no">BRAND_ME</p></footer>
+</p>
+<video controls src="https://bit.ly/3nWh78w" poster="posterImage.png"></video>
+<a href="index.html" download="fileName">Specify the file name in the attribute for the source to be downloaded as </a>
+<input type="file" accept=".png, .jpg" placeholder="You can use accept attribute to specfy file type, only audio, image or video format" />
+<input type="email" multiple placeholder="it is a boolean value valid for file, email input types and the <select> element"/>
 <script>
     listAlbums();
 </script>
